force-app/main/default/objects/sked__Templated_Job__c/sked__Templated_Job__c.object-meta.xml
<CustomObject>
    <label>Templated Job</label>
    <nameField>
        <displayFormat>TJB-{0000}</displayFormat>
        <label>Templated Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>