force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Account__c.field-meta.xml
<CustomField>
    <fullName>sked__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Templated Jobs</relationshipLabel>
    <relationshipName>Templated_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>