force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Address__c.field-meta.xml
<CustomField>
    <fullName>sked__Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>