force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Can_Be_Declined__c.field-meta.xml
<CustomField>
    <fullName>sked__Can_Be_Declined__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Can Be Declined</label>
    <type>Checkbox</type>
</CustomField>