force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Contact__c.field-meta.xml
<CustomField>
    <fullName>sked__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Templated Jobs</relationshipLabel>
    <relationshipName>Templated_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>