force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Customer_Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>sked__Customer_Confirmation_Status__c</fullName>
    <label>Customer Confirmation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>