force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Is_Group_Event__c.field-meta.xml
<CustomField>
    <fullName>sked__Is_Group_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group Event</label>
    <type>Checkbox</type>
</CustomField>