force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Job_Allocation_Time_Source__c.field-meta.xml
<CustomField>
    <fullName>sked__Job_Allocation_Time_Source__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Job Allocation Time Source</label>
    <type>Checkbox</type>
</CustomField>