force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Location__c.field-meta.xml
<CustomField>
    <fullName>sked__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Templated Jobs</relationshipLabel>
    <relationshipName>Templated_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>