force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Locked__c.field-meta.xml
<CustomField>
    <fullName>sked__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>