force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Min_Attendees__c.field-meta.xml
<CustomField>
    <fullName>sked__Min_Attendees__c</fullName>
    <label>Min Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>