force-app/main/default/objects/sked__Templated_Job__c/fields/sked__Notify_Period__c.field-meta.xml
<CustomField>
    <fullName>sked__Notify_Period__c</fullName>
    <label>Notify Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>