force-app/main/default/objects/sked__Templated_Job__c/validationRules/sked__MaxAttendeesPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__MaxAttendeesPositive</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNULL(sked__Max_Attendees__c)), sked__Max_Attendees__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>sked__Max_Attendees__c</errorDisplayField>
    <errorMessage>If Max Attendees is set it must be positive.</errorMessage>
</ValidationRule>